header and quote/link
modified header and quote text. added link to name.

--- a/syllabus.html
+++ b/syllabus.html
@@ -1,10 +1,19 @@
-BUS36110
 
-Application Development
+<<!DOCTYPE html>
+<html>
+	<head>
+		<title></title>
+	</head>
+	<body>
+		<h1>BUS36000</h1>
 
-Knowing how to hack also means that when you have ideas, you&rsquo;ll be able to implement them&hellip; It&rsquo;s a big advantage, when you&rsquo;re considering an idea like putting a college facebook online, if instead of merely thinking &ldquo;That&rsquo;s an interesting idea,&rdquo; you can think instead &ldquo;That&rsquo;s an interesting idea. I&rsquo;ll try building an initial version tonight.&rdquo;
+		<p>Application Development</p>
+	
 
-&mdash; Paul Graham
+<blockquote>
+<p>Knowing how to hack also means that when you have ideas, you&rsquo;ll be able to implement them&hellip; It&rsquo;s a big advantage, when you&rsquo;re considering an idea like putting a college facebook online, if instead of merely thinking &ldquo;That&rsquo;s an interesting idea,&rdquo; you can think instead &ldquo;That&rsquo;s an interesting idea. I&rsquo;ll try building an initial version tonight.&rdquo;</p>
+<a href="http://paulgraham.com/startupideas.html" target=_blank>&mdash; Paul Graham</a>
+</blockquote>
 
 Why
 
@@ -183,3 +192,6 @@ Celebrate!
     border: thin blue solid;
   }
 </style>
+
+	</body>
+</html>
