added  additional text to body

--- a/syllabus.html
+++ b/syllabus.html
@@ -10,43 +10,47 @@
 		<p>Application Development</p>
 	
 
-<blockquote>
-<p>Knowing how to hack also means that when you have ideas, you&rsquo;ll be able to implement them&hellip; It&rsquo;s a big advantage, when you&rsquo;re considering an idea like putting a college facebook online, if instead of merely thinking &ldquo;That&rsquo;s an interesting idea,&rdquo; you can think instead &ldquo;That&rsquo;s an interesting idea. I&rsquo;ll try building an initial version tonight.&rdquo;</p>
-<a href="http://paulgraham.com/startupideas.html" target=_blank>&mdash; Paul Graham</a>
-</blockquote>
+	<blockquote>
+		<p>Knowing how to hack also means that when you have ideas, you&rsquo;ll be able to implement them&hellip; It&rsquo;s a big advantage, when you&rsquo;re considering an idea like putting a college facebook online, if instead of merely thinking &ldquo;That&rsquo;s an interesting idea,&rdquo; you can think instead &ldquo;That&rsquo;s an interesting idea. I&rsquo;ll try building an initial version tonight.&rdquo;</p>
+		<a href="http://paulgraham.com/startupideas.html" target=_blank>&mdash; Paul Graham</a>
+	</blockquote>
 
-Why
+		<h2>Why</h2>
 
-The new reality is that every company is a software company. Even in traditionally brick-and-mortar industries, software is performing more and more of the work. And, of course, many companies (especially &ldquo;lean startups&rdquo;) are purely software-based.
+<p>The new reality is that every company is a software company. Even in traditionally brick-and-mortar industries, software is performing more and more of the work. And, of course, many companies (especially &ldquo;lean startups&rdquo;) are purely software-based.</p>
 
-Lacking an understanding of how software works while working in a software world puts you at a disadvantage. In this course, you will build a functional prototype of a software application. To do this, you will learn the Ruby on Rails web application framework, but our higher-level goals are to:
-
-Understand the general, platform-independent patterns of how applications work.
-Communicate more effectively and credibly with developers on our teams.
-Develop a builder&rsquo;s eye for problems that can be solved with technology.
-Prioritize features more intelligently by developing a better feel for their costs.
-Be able to make and test small changes to an application yourself.
-Become familiar with the agile development technique.
-Be empowered with a new, powerful, and just plain fun creative outlet
-
-Who, Where, &amp; When
-
-Instructor:
-Raghu Betina (Raghu.Betina@chicagobooth.edu)
-Lecture:
-Wednesdays 6:00-9:00pm, Booth 455 NBC Towers
-Office Hours:
-TBD. Considering Google Hangouts
+<p>Lacking an understanding of how software works while working in a software world puts you at a disadvantage. In this course, you will build a functional prototype of a software application. To do this, you will learn the Ruby on Rails web application framework, but our higher-level goals are to:</p>
 
 
-Required Materials
+<ol>
+<li>Understand the general, platform-independent patterns of how applications work.</li>
+<li>Communicate more effectively and credibly with developers on our teams.</li>
+<li>Develop a builder&rsquo;s eye for problems that can be solved with technology.</li>
+<li>Prioritize features more intelligently by developing a better feel for their costs.</li>
+<li>Be able to make and test small changes to an application yourself.</li>
+<li>Become familiar with the agile development technique.</li>
+<li>Be empowered with a new, powerful, and just plain fun creative outlet</li>
+</ol>
+
+
+<h2>Who, Where, &amp; When</h2>
+
+<p>Instructor:</p>
+<p>Raghu Betina (Raghu.Betina@chicagobooth.edu)</p>
+<p>Lecture:</p>
+<p>Wednesdays 6:00-9:00pm, Booth 455 NBC Towers</p>
+<p>Office Hours:</p>
+<p>TBD. Considering Google Hangouts</p>
+
+
+<h2>Required Material</h2>
 
 Text:
 Chris Pine&rsquo;s Learn to Program, Second Edition.
 Software:
 You will receive a detailed guide to setting up a development environment on your Mac or Windows laptop. All required software is free. In addition, some optional tools that will make your life easier have a free trial.
 
-Course Format
+<h2>Course Format</h2>
 
 This course is entirely project-driven. We will build a series of applications together in class. We will start with a simple idea and learn just what we need about various technologies (HTML, CSS, Ruby, Rails, JavaScript) to make that idea real.
 
