--- a/syllabus.html
+++ b/syllabus.html
@@ -1,8 +1,8 @@
-
+<tr>>td></d>
 <<!DOCTYPE html>
 <html>
 	<head>
-		<title></title>
+		<title></title>	
 	</head>
 	<body>
 		<h1>BUS36000</h1>
@@ -35,157 +35,167 @@
 
 <h2>Who, Where, &amp; When</h2>
 
-<p>Instructor:</p>
-<p>Raghu Betina (Raghu.Betina@chicagobooth.edu)</p>
-<p>Lecture:</p>
-<p>Wednesdays 6:00-9:00pm, Booth 455 NBC Towers</p>
-<p>Office Hours:</p>
-<p>TBD. Considering Google Hangouts</p>
-
+<p>
+Instructor:
+<blockquote>Raghu Betina (Raghu.Betina@chicagobooth.edu)
+</blockquote>
+Lecture: 
+<blockquote>
+Wednesdays 6:00-9:00pm, Booth 455 NBC Towers  
+</blockquote>
+Office Hours:
+<blockquote>
+	TBD. Considering Google Hangouts
+</blockquote>
+</p>
 
 <h2>Required Material</h2>
 
+<p>
 Text:
 Chris Pine&rsquo;s Learn to Program, Second Edition.
 Software:
 You will receive a detailed guide to setting up a development environment on your Mac or Windows laptop. All required software is free. In addition, some optional tools that will make your life easier have a free trial.
+</p>
 
 <h2>Course Format</h2>
 
-This course is entirely project-driven. We will build a series of applications together in class. We will start with a simple idea and learn just what we need about various technologies (HTML, CSS, Ruby, Rails, JavaScript) to make that idea real.
+<p>This course is entirely project-driven. We will build a series of applications together in class. We will start with a simple idea and learn just what we need about various technologies (HTML, CSS, Ruby, Rails, JavaScript) to make that idea real.</p>
 
-We will then build a slightly more complicated idea, and deepen our knowledge of each topic. And then an even more complicated idea. In this way, we will spiral across topics picking up essential, applicable knowledge; what we&rsquo;re not going to do are deep theoretical dives into each topic, one after the other, without ever getting to build real stuff.
+<p>We will then build a slightly more complicated idea, and deepen our knowledge of each topic. And then an even more complicated idea. In this way, we will spiral across topics picking up essential, applicable knowledge; what we&rsquo;re not going to do are deep theoretical dives into each topic, one after the other, without ever getting to build real stuff.</p>
 
-In addition, you will build your own app idea. During the first few weeks, you will meet with an instructor to discuss your ideas and select one that matches the scope of the course. Each week, part of your homework will be to plug the concepts you learned in class into your app. This app will be your final project.
+<p>In addition, you will build your own app idea. During the first few weeks, you will meet with an instructor to discuss your ideas and select one that matches the scope of the course. Each week, part of your homework will be to plug the concepts you learned in class into your app. This app will be your final project.</p>
 
-Lectures will generally consist of the instructor demonstrating a concept and then giving the class a challenge to practice it and think up questions. You are strongly encouraged to work in pairs during these challenges.
+<p>Lectures will generally consist of the instructor demonstrating a concept and then giving the class a challenge to practice it and think up questions. You are strongly encouraged to work in pairs during these challenges.</p>
 
-Expectations &amp; Time Commitment
+<h2>Expectations &amp; Time Commitment</h2>
 
-This course is designed for a beginner who has never programmed before. It is our goal to make programming accessible to as many people as possible, and dispel the mystique that surrounds it. It&rsquo;s really possible, with passion and persistence, for a beginner to become productive very quickly with today&rsquo;s tools.
+<p>This course is designed for a beginner who has never programmed before. It is our goal to make programming accessible to as many people as possible, and dispel the mystique that surrounds it. It&rsquo;s really possible, with passion and persistence, for a beginner to become productive very quickly with today&rsquo;s tools.</p>
 
-Note: it&rsquo;s possible, but not always easy. If you have never seen a line of code before, you are going to be learning a lot of new things all at once, and so should plan to spend a significant amount of time. If you already have some programming experience, you may have to spend less time initially while we learn basics; but once we get into Rails, it will likely be all new to you too.
+<p>Note: it&rsquo;s possible, but not always easy. If you have never seen a line of code before, you are going to be learning a lot of new things all at once, and so should plan to spend a significant amount of time. If you already have some programming experience, you may have to spend less time initially while we learn basics; but once we get into Rails, it will likely be all new to you too.</p>
 
-In short, it is not recommended to take this course if you are a completely new to programming and you have a lot of other commitments this quarter.
+<p>In short, it is not recommended to take this course if you are a completely new to programming and you have a lot of other commitments this quarter.</p>
 
-What you can expect from us in return is a lot of support. We know it's a lot, and we're here for you -- one-on-one coaching appointments, office hours, etc. We all will help each other on the class discussion board. There is no such thing as a dumb question; we&rsquo;re all beginners here, learning together.
+<p>What you can expect from us in return is a lot of support. We know it's a lot, and we're here for you -- one-on-one coaching appointments, office hours, etc. We all will help each other on the class discussion board. There is no such thing as a dumb question; we&rsquo;re all beginners here, learning together.</p>
 
-Attendance (10% of your grade)
+<h2>Attendance (10% of your grade)</h2>
 
-Lecture attendance is mandatory, and you are expected to be on time. To account for the vagaries of life, you will be allowed to miss one class with no penalty. After that, 1% will be deducted from your final grade for each unexcused absence. In addition, you will not gain access to the lecture recording of any class you do not attend.
+<p>Lecture attendance is mandatory, and you are expected to be on time. To account for the vagaries of life, you will be allowed to miss one class with no penalty. After that, 1% will be deducted from your final grade for each unexcused absence. In addition, you will not gain access to the lecture recording of any class you do not attend.</p>
 
-An excused absence is a documented medical emergency, religious holiday, etc. Get in touch with the instructor immediately if you foresee any such absences.
+<p>An excused absence is a documented medical emergency, religious holiday, etc. Get in touch with the instructor immediately if you foresee any such absences.</p>
 
-Attendance of coaching appointments and office hours will be noted and may make the instructor more sympathetic when it comes to borderline grades.
+<p>Attendance of coaching appointments and office hours will be noted and may make the instructor more sympathetic when it comes to borderline grades.</p>
 
-Homework (40% of your grade, 5% each)
+<h2>Homework (40% of your grade, 5% each)</h2>
 
-Homeworks will be posted each week by noon on Thursday. Homeworks will generally consist of re-doing what we did together in lecture, applying that concept to a few other contexts, and then applying it to your own app idea.
+<p>Homeworks will be posted each week by noon on Thursday. Homeworks will generally consist of re-doing what we did together in lecture, applying that concept to a few other contexts, and then applying it to your own app idea.</p>
 
-Homeworks will be due on Wednesday at 5pm; no exceptions, because we will often discuss homework solutions in class. To account for the vagaries of life, you can miss one homework submission without penalty.
+<p>Homeworks will be due on Wednesday at 5pm; no exceptions, because we will often discuss homework solutions in class. To account for the vagaries of life, you can miss one homework submission without penalty.</p>
 
-If you want any partial credit on homeworks, you must schedule a one-on-one appointment with a Faculty Coach to go through your solutions and discuss anything that's fuzzy. You can book up to one 30 minute appointment per week. The appointment can be remote if necessary, via Google Hangout. We strongly recommend taking advantage of this unique resource; we are lucky to have professional developers acting as Faculty Coaches.
+<p>If you want any partial credit on homeworks, you must schedule a one-on-one appointment with a Faculty Coach to go through your solutions and discuss anything that's fuzzy. You can book up to one 30 minute appointment per week. The appointment can be remote if necessary, via Google Hangout. We strongly recommend taking advantage of this unique resource; we are lucky to have professional developers acting as Faculty Coaches.</p>
 
-You are allowed and encouraged to work in study groups on the homeworks, but you must type up your final solutions yourself. In other words, no copy-pasting.
+<p>You are allowed and encouraged to work in study groups on the homeworks, but you must type up your final solutions yourself. In other words, no copy-pasting.</p>
 
-Midterm (25% of your grade)
+<h2>Midterm (25% of your grade)</h2>
 
-The midterm exam will occupy one-half of Week 7 class. It will be a practical exam; you will download broken applications and fix them.
+<p>The midterm exam will occupy one-half of Week 7 class. It will be a practical exam; you will download broken applications and fix them.</p>
 
-Final Project (25% of your grade)
+<h2>Final Project (25% of your grade)</h2>
 
-The final project will be to build one of your own ideas and to write a brief essay about your app and what you learned from the process of building it. Note that if you complete all your homeworks on time, your final project should be well underway by Week 9, and after that you just need to add polish.
+<p>The final project will be to build one of your own ideas and to write a brief essay about your app and what you learned from the process of building it. Note that if you complete all your homeworks on time, your final project should be well underway by Week 9, and after that you just need to add polish.</p>
 
-Tentative Schedule (May change to accommodate guest presenters &amp; student needs)
+<h2>Tentative Schedule (May change to accommodate guest presenters &amp; student needs)</h2>
 
-Week 1
-Getting Started
-Course introduction
-Text editor basics &amp; keyboard shortcuts
-GitHub basics
-HTML &amp; CSS
-Goal/HW: Push a webpage to GitHub, read "How to Get Startup Ideas"
+<table>
+<tr><td>Week 1</tr></td>
+<tr><td>Getting Started</tr></td>
+<tr><td>Course introduction</tr></td>
+<tr><td>Text editor basics &amp; keyboard shortcuts</tr></td>
+<tr><td>GitHub basics</tr></td>
+<tr><td>HTML &amp; CSS</tr></td>
+<tr><td>Goal/HW: Push a webpage to GitHub, read "How to Get Startup Ideas"</tr></td>
 
-Week 2
-Defining Your MVP
-Bootstrap &amp; tools
-Low-fidelity sketches
-Extracting user stories
-Prioritizing and eliminating non-essentials
-Domain Modeling
-Goal/HW: Settle on an MVP, mock up idea in HTML, diagram domain model
-Ruby Foundations
-Data types &amp; instructions (begin reading Pine book)
 
-Week 3
-Managing lists of things
-Defining our own instructions
-APIs
-Goal/HW: Finish Pine book
+<tr><td>Week 2</tr></td>
+<tr><td>Defining Your MVP</tr></td>
+<tr><td>Bootstrap &amp; tools</tr></td>
+<tr><td>Low-fidelity sketches</tr></td>
+<tr><td>Extracting user stories</tr></td>
+<tr><td>Prioritizing and eliminating non-essentials</tr></td>
+<tr><td>Domain Modeling</tr></td>
+<tr><td>Goal/HW: Settle on an MVP, mock up idea in HTML, diagram domain model</tr></td>
+<tr><td>Ruby Foundations</tr></td>
+<tr><td>Data types &amp; instructions (begin reading Pine book)</tr></td>
 
-Week 4
-Ruby Objects
-Defining our own data types
-Creating individual instances of objects
-Adding attributes
-Class inheritance
-Goal/HW: Read data from an external service like Facebook
-Rails Fundamentals
-Setting up a web server
-Listening for requests
-Responding dynamically
-Goal/HW: Get a web server up and running, add your static HTML mockups
+<tr><td>Week 3</tr></td>
+<tr><td>Managing lists of things</tr></td>
+<tr><td>Defining our own instructions</tr></td>
+<tr><td>APIs</tr></td>
+<tr><td>Goal/HW: Finish Pine book</tr></td>
 
-Week 5
-Console CRUD
-Database fundamentals
-Creating, reading, updating, and deleting
-Receiving inputs from the user
-Goal/HW: Add one database table
-Associations
-One-to-many
-Goal/HW: Add more models and relate them to one another
+<tr><td>Week 4</tr></td>
+<tr><td>Ruby Objects</tr></td>
+<tr><td>Defining our own data types</tr></td>
+<tr><td>Creating individual instances of objects</tr></td>
+<tr><td>Adding attributes</tr></td>
+<tr><td>Class inheritance</tr></td>
+<tr><td>Goal/HW: Read data from an external service like Facebook</tr></td>
+<tr><td>Rails Fundamentals</tr></td>
+<tr><td>Setting up a web server</tr></td>
+<tr><td>Listening for requests</tr></td>
+<tr><td>Responding dynamically</tr></td>
+<tr><td>Goal/HW: Get a web server up and running, add your static HTML mockups</tr></td>
 
-Week 6
-Domain Modeling
-Many-to-many
-Goal/HW: Translate user stories into queries
-Web CRUD
-Wiring up HTML forms
-The Golden Seven
-Goal/HW: Complete all database-backed web resources
+<tr><td>Week 5</tr></td>
+<tr><td>Console CRUD</tr></td>
+<tr><td>Database fundamentals</tr></td>
+<tr><td>Creating, reading, updating, and deleting</tr></td>
+<tr><td>Receiving inputs from the user</tr></td>
+<tr><td>Goal/HW: Add one database table</tr></td>
+<tr><td>Associations</tr></td>
+<tr><td>One-to-many</tr></td>
+<tr><td>Goal/HW: Add more models and relate them to one another</tr></td>
 
-Week 7
-Interface
-MIDTERM
-Displaying associated objects
-Goal/HW: Satisfy user story interface requirements
+<tr><td>Week 6</tr></td>
+<tr><td>Domain Modeling</tr></td>
+<tr><td>Many-to-many</tr></td>
+<tr><td>Goal/HW: Translate user stories into queries</tr></td>
+<tr><td>Web CRUD</tr></td>
+<tr><td>Wiring up HTML forms</tr></td>
+<tr><td>The Golden Seven</tr></td>
+<tr><td>Goal/HW: Complete all database-backed web resources</tr></td>
 
-Week 7.5
-Authentication and Authorization
-Cookies
-Encryption
-Filters
-Goal/HW: Add sign-in/out and personalized pages
+<tr><td>Week 7</tr></td>
+<tr><td>Interface</tr></td>
+<tr><td>MIDTERM</tr></td>
+<tr><td>Displaying associated objects</tr></td>
+<tr><td>Goal/HW: Satisfy user story interface requirements</tr></td>
 
-Week 8
-Extra Credit
-Validations, scaffold roundup
-Gems, pagination
-Deployment
-Callbacks
-Goal/HW: Implement one of the above
+<tr><td>Week 7.5</tr></td>
+<tr><td>Authentication and Authorization</tr></td>
+<tr><td>Cookies</tr></td>
+<tr><td>Encryption</tr></td>
+<tr><td>Filters</tr></td>
+<tr><td>Goal/HW: Add sign-in/out and personalized pages</tr></td>
 
-Week 10
-Fun Stuff
-Sending email and SMS, payments, JavaScript, file uploads, testing
-Resources for further learning
-No homework
+<tr><td>Week 8</tr></td>
+<tr><td>Extra Credit</tr></td>
+<tr><td>Validations, scaffold roundup</tr></td>
+<tr><td>Gems, pagination</tr></td>
+<tr><td>Deployment</tr></td>
+<tr><td>Callbacks</tr></td>
+<tr><td>Goal/HW: Implement one of the above</tr></td>
 
-Week 11
-Submit Final Project
-Celebrate!
+<tr><td>Week 10</tr></td>
+<tr><td>Fun Stuff</tr></td>
+<tr><td>Sending email and SMS, payments, JavaScript, file uploads, testing</tr></td>
+<tr><td>Resources for further learning</tr></td>
+<tr><td>No homework</tr></td>
 
+<tr><td>Week 11</tr></td>
+<tr><td>Submit Final Project</tr></td>
+<tr><td>Celebrate!</tr></td>
+</table>
 
 <style>
   td {
@@ -195,7 +205,7 @@ Celebrate!
   th {
     border: thin blue solid;
   }
-</style>
+</style><p></p>
 
 	</body>
 </html>
