--- a/syllabus_backup.html
+++ b/syllabus_backup.html
@@ -3,7 +3,6 @@
 <html>
 	<head>
 		<title></title>	
-		<link rel="stylesheet" type="text/css" href="syllabus styles.css">
 	</head>
 	<body>
 		<h1>BUS36000</h1>
@@ -52,10 +51,10 @@ Office Hours:
 
 <h2>Required Material</h2>
 
-<p class="italic">
+<p>
 Text:
 <blockquote>
-Chris Pine&rsquo;s <span class="italic">; Learn to Program, <span class="underline">Second Edition.</span></span>
+Chris Pine&rsquo;s Learn to Program, Second Edition.
 </blockquote>
 Software:
 <blockquote>
@@ -77,9 +76,9 @@ You will receive a detailed guide to setting up a development environment on you
 
 <p>This course is designed for a beginner who has never programmed before. It is our goal to make programming accessible to as many people as possible, and dispel the mystique that surrounds it. It&rsquo;s really possible, with passion and persistence, for a beginner to become productive very quickly with today&rsquo;s tools.</p>
 
-<p>Note: it&rsquo;s <span class="italic">possible</span>, but not always <span class="italic">easy</span>. If you have never seen a line of code before, you are going to be learning a lot of new things all at once, and so should plan to spend a significant amount of time. If you already have some programming experience, you may have to spend less time initially while we learn basics; but once we get into Rails, it will likely be all new to you too.</p>
+<p>Note: it&rsquo;s possible, but not always easy. If you have never seen a line of code before, you are going to be learning a lot of new things all at once, and so should plan to spend a significant amount of time. If you already have some programming experience, you may have to spend less time initially while we learn basics; but once we get into Rails, it will likely be all new to you too.</p>
 
-<p>In short, it is not recommended to take this course if you <span class="italic">are</span> a completely new to programming and you have a lot of other commitments this quarter.</p>
+<p>In short, it is not recommended to take this course if you are a completely new to programming and you have a lot of other commitments this quarter.</p>
 
 <p>What you can expect from us in return is a lot of support. We know it's a lot, and we're here for you -- one-on-one coaching appointments, office hours, etc. We all will help each other on the class discussion board. There is no such thing as a dumb question; we&rsquo;re all beginners here, learning together.</p>
 
@@ -112,7 +111,7 @@ You will receive a detailed guide to setting up a development environment on you
 <h2>Tentative Schedule (May change to accommodate guest presenters &amp; student needs)</h2>
 
 <table>
-<td>Week 1</td>
+<th>Week 1</th>
 <th>Getting Started</th>
 <tr><td>Course introduction</tr></td>
 <tr><td>Text editor basics &amp; keyboard shortcuts</tr></td>
@@ -120,8 +119,9 @@ You will receive a detailed guide to setting up a development environment on you
 <tr><td>HTML &amp; CSS</tr></td>
 <tr><td>Goal/HW: Push a webpage to GitHub, read "How to Get Startup Ideas"</tr></td>
 
+
 <tr><td>Week 2</tr></td>
-<th>Defining Your MVP</th>
+<tr><td>Defining Your MVP</tr></td>
 <tr><td>Bootstrap &amp; tools</tr></td>
 <tr><td>Low-fidelity sketches</tr></td>
 <tr><td>Extracting user stories</tr></td>
