add week column to table
i added the week column to the table and highlighted each weekly
subject.

--- a/syllabus.html
+++ b/syllabus.html
@@ -112,46 +112,46 @@ You will receive a detailed guide to setting up a development environment on you
 <h2>Tentative Schedule (May change to accommodate guest presenters &amp; student needs)</h2>
 
 <table>
-<td>Week 1</td>
-<th>Getting Started</th>
+<th rowspan="7">Week 1</th>
+<tr><th>Getting Started</tr></th>
 <tr><td>Course introduction</tr></td>
 <tr><td>Text editor basics &amp; keyboard shortcuts</tr></td>
 <tr><td>GitHub basics</tr></td>
 <tr><td>HTML &amp; CSS</tr></td>
 <tr><td>Goal/HW: Push a webpage to GitHub, read "How to Get Startup Ideas"</tr></td>
 
-<tr><td>Week 2</tr></td>
-<th>Defining Your MVP</th>
+<th rowspan="10">Week 2</th>
+<tr><th>Defining Your MVP</tr></th>
 <tr><td>Bootstrap &amp; tools</tr></td>
 <tr><td>Low-fidelity sketches</tr></td>
 <tr><td>Extracting user stories</tr></td>
 <tr><td>Prioritizing and eliminating non-essentials</tr></td>
 <tr><td>Domain Modeling</tr></td>
 <tr><td>Goal/HW: Settle on an MVP, mock up idea in HTML, diagram domain model</tr></td>
-<tr><td>Ruby Foundations</tr></td>
+<tr><th>Ruby Foundations</tr></th>
 <tr><td>Data types &amp; instructions (begin reading Pine book)</tr></td>
 
-<tr><td>Week 3</tr></td>
+<th rowspan="5">Week 3</th>
 <tr><td>Managing lists of things</tr></td>
 <tr><td>Defining our own instructions</tr></td>
 <tr><td>APIs</tr></td>
 <tr><td>Goal/HW: Finish Pine book</tr></td>
 
-<tr><td>Week 4</tr></td>
-<tr><td>Ruby Objects</tr></td>
+<th rowspan="12">Week 4</th>
+<tr><th>Ruby Objects</tr></th>
 <tr><td>Defining our own data types</tr></td>
 <tr><td>Creating individual instances of objects</tr></td>
 <tr><td>Adding attributes</tr></td>
 <tr><td>Class inheritance</tr></td>
 <tr><td>Goal/HW: Read data from an external service like Facebook</tr></td>
-<tr><td>Rails Fundamentals</tr></td>
+<tr><th>Rails Fundamentals</tr></th>
 <tr><td>Setting up a web server</tr></td>
 <tr><td>Listening for requests</tr></td>
 <tr><td>Responding dynamically</tr></td>
 <tr><td>Goal/HW: Get a web server up and running, add your static HTML mockups</tr></td>
 
-<tr><td>Week 5</tr></td>
-<tr><td>Console CRUD</tr></td>
+<th rowspan="9">Week 5</th>
+<tr><th>Console CRUD</tr></th>
 <tr><td>Database fundamentals</tr></td>
 <tr><td>Creating, reading, updating, and deleting</tr></td>
 <tr><td>Receiving inputs from the user</tr></td>
@@ -160,44 +160,44 @@ You will receive a detailed guide to setting up a development environment on you
 <tr><td>One-to-many</tr></td>
 <tr><td>Goal/HW: Add more models and relate them to one another</tr></td>
 
-<tr><td>Week 6</tr></td>
-<tr><td>Domain Modeling</tr></td>
+<th rowspan="8">Week 6</th>
+<tr><th>Domain Modeling</tr></th>
 <tr><td>Many-to-many</tr></td>
 <tr><td>Goal/HW: Translate user stories into queries</tr></td>
-<tr><td>Web CRUD</tr></td>
+<tr><th>Web CRUD</tr></th>
 <tr><td>Wiring up HTML forms</tr></td>
 <tr><td>The Golden Seven</tr></td>
 <tr><td>Goal/HW: Complete all database-backed web resources</tr></td>
 
-<tr><td>Week 7</tr></td>
-<tr><td>Interface</tr></td>
+<th rowspan="5">Week 7</th>
+<tr><th>Interface</tr></th>
 <tr><td>MIDTERM</tr></td>
 <tr><td>Displaying associated objects</tr></td>
 <tr><td>Goal/HW: Satisfy user story interface requirements</tr></td>
 
-<tr><td>Week 7.5</tr></td>
-<tr><td>Authentication and Authorization</tr></td>
+<th rowspan="6">Week 8</th>
+<tr><th>Authentication and Authorization</tr></th>
 <tr><td>Cookies</tr></td>
 <tr><td>Encryption</tr></td>
 <tr><td>Filters</tr></td>
 <tr><td>Goal/HW: Add sign-in/out and personalized pages</tr></td>
 
-<tr><td>Week 8</tr></td>
-<tr><td>Extra Credit</tr></td>
+<th rowspan="7">Week 9</th>
+<tr><th>Extra Credit</tr></th>
 <tr><td>Validations, scaffold roundup</tr></td>
 <tr><td>Gems, pagination</tr></td>
 <tr><td>Deployment</tr></td>
 <tr><td>Callbacks</tr></td>
 <tr><td>Goal/HW: Implement one of the above</tr></td>
 
-<tr><td>Week 10</tr></td>
-<tr><td>Fun Stuff</tr></td>
+<th rowspan="5">Week 10</th>
+<tr><th>Fun Stuff</tr></th>
 <tr><td>Sending email and SMS, payments, JavaScript, file uploads, testing</tr></td>
 <tr><td>Resources for further learning</tr></td>
 <tr><td>No homework</tr></td>
 
-<tr><td>Week 11</tr></td>
-<tr><td>Submit Final Project</tr></td>
+<th rowspan="5">Week 11</th>
+<tr><th>Submit Final Project</tr></th>
 <tr><td>Celebrate!</tr></td>
 </table>
 
