add dl and dd tags

--- a/syllabus.html
+++ b/syllabus.html
@@ -36,32 +36,23 @@
 
 <h2>Who, Where, &amp; When</h2>
 
-<p>
-Instructor:
-<blockquote>Raghu Betina (Raghu.Betina@chicagobooth.edu)
-</blockquote>
-Lecture: 
-<blockquote>
-Wednesdays 6:00-9:00pm, Booth 455 NBC Towers  
-</blockquote>
-Office Hours:
-<blockquote>
-	TBD. Considering Google Hangouts
-</blockquote>
-</p>
+<dl>
+	<dt>Instructor:</dt>
+	<dd>Raghu Betina (Raghu.Betina@chicagobooth.edu)</dd>
+	<dt>Lecture: </dt>
+	<dd>Wednesdays 6:00-9:00pm, Booth 455 NBC Towers  </dd>
+	<dt>Office Hours:</dt>
+	<dd>TBD. Considering Google Hangouts</dd>
+</dl>
 
 <h2>Required Material</h2>
 
-<p class="italic">
-Text:
-<blockquote>
-Chris Pine&rsquo;s <span class="italic">; Learn to Program, <span class="underline">Second Edition.</span></span>
-</blockquote>
-Software:
-<blockquote>
-You will receive a detailed guide to setting up a development environment on your Mac or Windows laptop. All required software is free. In addition, some optional tools that will make your life easier have a free trial.
-</blockquote>
-</p>
+<dl>
+	<dt>Text:</dt>
+	<dd>Chris Pine&rsquo;s <span class="italic">; Learn to Program, <span class="underline">Second Edition.</span></span></dd>
+	<dt>Software:</dt>
+	<dd>You will receive a detailed guide to setting up a development environment on your Mac or Windows laptop. All required software is free. In addition, some optional tools that will make your life easier have a free trial.</dd>
+</dl>
 
 <h2>Course Format</h2>
 
