--- a/syllabus.html
+++ b/syllabus.html
@@ -2,18 +2,18 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title></title>	
+		<title>syllabus</title>	
 		<link rel="stylesheet" type="text/css" href="syllabus styles.css">
 	</head>
 	<body>
-		<h1>BUS36000</h1>
+		<h1>BUS36110</h1>
 
 		<p>Application Development</p>
 	
 
 	<blockquote>
 		<p>Knowing how to hack also means that when you have ideas, you&rsquo;ll be able to implement them&hellip; It&rsquo;s a big advantage, when you&rsquo;re considering an idea like putting a college facebook online, if instead of merely thinking &ldquo;That&rsquo;s an interesting idea,&rdquo; you can think instead &ldquo;That&rsquo;s an interesting idea. I&rsquo;ll try building an initial version tonight.&rdquo;</p>
-		<a href="http://paulgraham.com/startupideas.html" target=_blank>&mdash; Paul Graham</a>
+		&mdash;<a href="http://paulgraham.com/startupideas.html" target=_blank> Paul Graham</a>
 	</blockquote>
 
 		<h2>Why</h2>
@@ -70,11 +70,11 @@
 
 <p>Note: it&rsquo;s <span class="italic">possible</span>, but not always <span class="italic">easy</span>. If you have never seen a line of code before, you are going to be learning a lot of new things all at once, and so should plan to spend a significant amount of time. If you already have some programming experience, you may have to spend less time initially while we learn basics; but once we get into Rails, it will likely be all new to you too.</p>
 
-<p>In short, it is not recommended to take this course if you <span class="italic">are</span> a completely new to programming and you have a lot of other commitments this quarter.</p>
+<p>In short, it is not recommended to take this course if you are a completely new to programming <span class="italic">and</span> you have a lot of other commitments this quarter.</p>
 
 <p>What you can expect from us in return is a lot of support. We know it's a lot, and we're here for you -- one-on-one coaching appointments, office hours, etc. We all will help each other on the class discussion board. There is no such thing as a dumb question; we&rsquo;re all beginners here, learning together.</p>
 
-<h2>Attendance (10% of your grade)</h2>
+<span class="line"><h2>Attendance</h2> <h3>(10% of your grade)</h3></span>
 
 <p>Lecture attendance is mandatory, and you are expected to be on time. To account for the vagaries of life, you will be allowed to miss one class with no penalty. After that, 1% will be deducted from your final grade for each unexcused absence. In addition, you will not gain access to the lecture recording of any class you do not attend.</p>
 
@@ -82,7 +82,9 @@
 
 <p>Attendance of coaching appointments and office hours will be noted and may make the instructor more sympathetic when it comes to borderline grades.</p>
 
-<h2>Homework (40% of your grade, 5% each)</h2>
+
+<span class="line"><h2>Homework</h2> <h3>(40% of your grade, 5% each)</h3></span>
+
 
 <p>Homeworks will be posted each week by noon on Thursday. Homeworks will generally consist of re-doing what we did together in lecture, applying that concept to a few other contexts, and then applying it to your own app idea.</p>
 
@@ -92,15 +94,15 @@
 
 <p>You are allowed and encouraged to work in study groups on the homeworks, but you must type up your final solutions yourself. In other words, no copy-pasting.</p>
 
-<h2>Midterm (25% of your grade)</h2>
+<span class="line"><h2>Midterm</h2> <h3>(25% of your grade)</h3></span>
 
 <p>The midterm exam will occupy one-half of Week 7 class. It will be a practical exam; you will download broken applications and fix them.</p>
 
-<h2>Final Project (25% of your grade)</h2>
+<span class="line"><h2>Final Project</h2> <h3>(25% of your grade)</h3></span>
 
 <p>The final project will be to build one of your own ideas and to write a brief essay about your app and what you learned from the process of building it. Note that if you complete all your homeworks on time, your final project should be well underway by Week 9, and after that you just need to add polish.</p>
 
-<h2>Tentative Schedule (May change to accommodate guest presenters &amp; student needs)</h2>
+<span class="line"><h2>Tentative Schedule</h2><h3>(May change to accommodate guest presenters &amp; student needs)</h3></span>
 
 <table>
 <th rowspan="7">Week 1</th>
