Updated style file and table

--- a/syllabus.html
+++ b/syllabus.html
@@ -105,7 +105,7 @@
 <span class="line"><h2>Tentative Schedule</h2><h3>(May change to accommodate guest presenters &amp; student needs)</h3></span>
 
 <table>
-<th rowspan="7">Week 1</th>
+<td rowspan="7"> Week 1</td>
 <tr><th>Getting Started</tr></th>
 <tr><td>Course introduction</tr></td>
 <tr><td>Text editor basics &amp; keyboard shortcuts</tr></td>
@@ -113,7 +113,7 @@
 <tr><td>HTML &amp; CSS</tr></td>
 <tr><td>Goal/HW: Push a webpage to GitHub, read "How to Get Startup Ideas"</tr></td>
 
-<th rowspan="10">Week 2</th>
+<td rowspan="10">Week 2</td>
 <tr><th>Defining Your MVP</tr></th>
 <tr><td>Bootstrap &amp; tools</tr></td>
 <tr><td>Low-fidelity sketches</tr></td>
@@ -124,13 +124,13 @@
 <tr><th>Ruby Foundations</tr></th>
 <tr><td>Data types &amp; instructions (begin reading Pine book)</tr></td>
 
-<th rowspan="5">Week 3</th>
+<td rowspan="5">Week 3</td>
 <tr><td>Managing lists of things</tr></td>
 <tr><td>Defining our own instructions</tr></td>
 <tr><td>APIs</tr></td>
 <tr><td>Goal/HW: Finish Pine book</tr></td>
 
-<th rowspan="12">Week 4</th>
+<td rowspan="12">Week 4</td>
 <tr><th>Ruby Objects</tr></th>
 <tr><td>Defining our own data types</tr></td>
 <tr><td>Creating individual instances of objects</tr></td>
@@ -143,7 +143,7 @@
 <tr><td>Responding dynamically</tr></td>
 <tr><td>Goal/HW: Get a web server up and running, add your static HTML mockups</tr></td>
 
-<th rowspan="9">Week 5</th>
+<td rowspan="9">Week 5</td>
 <tr><th>Console CRUD</tr></th>
 <tr><td>Database fundamentals</tr></td>
 <tr><td>Creating, reading, updating, and deleting</tr></td>
@@ -153,7 +153,7 @@
 <tr><td>One-to-many</tr></td>
 <tr><td>Goal/HW: Add more models and relate them to one another</tr></td>
 
-<th rowspan="8">Week 6</th>
+<td rowspan="8">Week 6</td>
 <tr><th>Domain Modeling</tr></th>
 <tr><td>Many-to-many</tr></td>
 <tr><td>Goal/HW: Translate user stories into queries</tr></td>
@@ -162,20 +162,20 @@
 <tr><td>The Golden Seven</tr></td>
 <tr><td>Goal/HW: Complete all database-backed web resources</tr></td>
 
-<th rowspan="5">Week 7</th>
+<td rowspan="5">Week 7</td>
 <tr><th>Interface</tr></th>
-<tr><td>MIDTERM</tr></td>
+<tr><td><b>MIDTERM</b></tr></td>
 <tr><td>Displaying associated objects</tr></td>
 <tr><td>Goal/HW: Satisfy user story interface requirements</tr></td>
 
-<th rowspan="6">Week 8</th>
+<td rowspan="6">Week 8</td>
 <tr><th>Authentication and Authorization</tr></th>
 <tr><td>Cookies</tr></td>
 <tr><td>Encryption</tr></td>
 <tr><td>Filters</tr></td>
 <tr><td>Goal/HW: Add sign-in/out and personalized pages</tr></td>
 
-<th rowspan="7">Week 9</th>
+<td rowspan="7">Week 9</td>
 <tr><th>Extra Credit</tr></th>
 <tr><td>Validations, scaffold roundup</tr></td>
 <tr><td>Gems, pagination</tr></td>
@@ -183,26 +183,16 @@
 <tr><td>Callbacks</tr></td>
 <tr><td>Goal/HW: Implement one of the above</tr></td>
 
-<th rowspan="5">Week 10</th>
+<td rowspan="5">Week 10</td>
 <tr><th>Fun Stuff</tr></th>
 <tr><td>Sending email and SMS, payments, JavaScript, file uploads, testing</tr></td>
 <tr><td>Resources for further learning</tr></td>
 <tr><td>No homework</tr></td>
 
-<th rowspan="5">Week 11</th>
+<td rowspan="5">Week 11</td>
 <tr><th>Submit Final Project</tr></th>
 <tr><td>Celebrate!</tr></td>
 </table>
-
-<style>
-  td {
-    border: thin red solid;
-  }
-
-  th {
-    border: thin blue solid;
-  }
-</style><p></p>
 
 	</body>
 </html>
